CONTENT/k8s-yaml/CMIS/cmis-deploy.yml
apiVersion: v1
kind: Service
metadata:
  name: ecm-cmis-svc
spec:
  ports:
    - name: http
      protocol: TCP
      port: 9080
      targetPort: 9080
    - name: https
      protocol: TCP
      port: 9443
      targetPort: 9443
  selector:
    app: cmis-cluster1
  type: NodePort
  sessionAffinity: ClientIP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ecm-cmis-np
  namespace: $KUBE_NAME_SPACE
spec:
   podSelector: {}
   policyTypes:
    - Ingress
    - Egress
   ingress:
   - {}
   egress:
   - ports:
     - port: 53
       protocol: UDP
     - port: 53
       protocol: TCP
   - to:
     - namespaceSelector: {}
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: ecm-cmis
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: cmis-cluster1
    spec:
      imagePullSecrets:
        - name: admin.registrykey
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - cmis-cluster1
              topologyKey: "kubernetes.io/hostname"
      containers:
      - image: <Repository for Docker Container Image>/default/cmis:latest
        imagePullPolicy: Always
        name: ecm-cmis
        securityContext:
          # If deployment on OpenShift and image supports arbitrary uid,
          # remove runAsUser and pods will run with arbitrarily assigned user ID.
          runAsUser: 50001
          allowPrivilegeEscalation: false
        resources:
          requests:
            memory: 256Mi
            cpu: 500m
          limits:
            memory: 1536Mi
            cpu: 1
        ports:
        - containerPort: 9080
          name: http
        - containerPort: 9443
          name: https
        readinessProbe:
          tcpSocket:
            port: 9080
          initialDelaySeconds: 90
          periodSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 9080
          initialDelaySeconds: 180
          periodSeconds: 5
        volumeMounts:
          - name: cmiscfgstore-pvc
            mountPath: "/opt/ibm/wlp/usr/servers/defaultServer/configDropins/overrides"
            subPath: configDropins/overrides
          - name: cmislogstore-pvc
            mountPath: "/opt/ibm/wlp/usr/servers/defaultServer/logs"
            subPath: logs

      volumes:
        - name: cmiscfgstore-pvc
          persistentVolumeClaim:
            claimName: "cmis-cfgstore"
        - name: cmislogstore-pvc
          persistentVolumeClaim:
            claimName: "cmis-logstore"
